cmake_minimum_required (VERSION 2.4) 
project (SEG-MAT)

#ADD_DEFINITIONS(-D_SCL_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS)

# CGAL
find_package(CGAL REQUIRED)

# Add source files
AUX_SOURCE_DIRECTORY(. SUB_SOURCES)
AUX_SOURCE_DIRECTORY(./emd SOURCES)
AUX_SOURCE_DIRECTORY(./graphcut SOURCES)
AUX_SOURCE_DIRECTORY(./ombb SOURCES)
SET(SOURCES ${SOURCES} ${SUB_SOURCES})

# Add included files
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Eigen3)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CGAL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CGAL_3RD_PARTY_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GMP_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MPFR_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

# Link external libraries
LINK_DIRECTORIES(${CGAL_LIBRARIES_DIR})
LINK_DIRECTORIES(${CGAL_3RD_PARTY_LIBRARIES_DIRS})

ADD_EXECUTABLE(SEG-MAT ${SOURCES})

TARGET_LINK_LIBRARIES(SEG-MAT ${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${CGAL_LIBRARIES})
